# ExternalAgentSDK

./: .gitignore  APISPEC.md  LICENSE  README.md
cpp/: CMakeLists.txt  README.md  hexio_sdk.h
csharp/: HexioClient.cs  HexioSdk.csproj  README.md  SyncTypes.cs
go/: README.md  go.mod  hexio_sdk.go
java/: README.md  pom.xml
java/src/main/java/io/hexio/sdk/: CheckinResponse.java  Command.java  CommandResult.java  DownloadChunkAck.java  DownloadChunkUpload.java  DownloadInitRequest.java  DownloadInitResponse.java  FileRequest.java  HexioApiException.java  HexioClient.java  KeylogUpload.java  PortFwdInboundData.java  PortFwdOpCloseResult.java  PortFwdOpenRequest.java  PortFwdOutboundData.java  PortFwdRecv.java  PortFwdSend.java  PortFwdSyncRequestEntry.java  PortFwdSyncResponseEntry.java  RegisterRequest.java  RegisterResponse.java  ScreenshotUpload.java  SideChannelResponse.java  SleepUpdate.java  SocksOpenEntry.java  SocksReceive.java  SocksSend.java  SocksSyncRequest.java  SocksSyncResponse.java  StagedFile.java  SyncRequest.java  SyncResponse.java
python/: README.md  pyproject.toml
python/hexio_sdk/: __init__.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
samples/: testagent.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: index.ts
