[package]
name = "hexio-sdk"
version = "1.0.0"
edition = "2021"
description = "Hexio External Agent SDK - Rust client for the Hexio C2 External Agent REST API"
license = "Proprietary"
documentation = "https://docs.hexio.io/external-agents"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
